feat: Add new path 'wjs' and update file paths, add Section 8 content and add new styles for fonts, body, nav, main, headings, and paragraphs

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML + CSS</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="wjs/styles.css" />
+    <script src="wjs/s8.js"></script>
   </head>
   <body>
-    <h1>This is a simple HTML + CSS template!</h1>
+    <h1>Section 8</h1>
   </body>
 </html>
